--- a/public/index.pug
+++ b/public/index.pug
@@ -15,8 +15,8 @@ html(lang='en', ng-app="app")
 		// jquery Cdn
 		script(src="http://code.jquery.com/jquery-3.1.0.min.js")
 		// Angular files
-		script(type="text/javascript", src="../js/app.js")
-		script(type="text/javascript", src="../js/ctrl.js")
-		script(type="text/javascript", src="../js/srvc.js")
+		script(type="text/javascript", src="./js/angular/app.js")
+		script(type="text/javascript", src="./js/angular/ctrl.js")
+		script(type="text/javascript", src="./js/angular/srvc.js")
 		// Personal etc js
-		script(type="text/javascript", src="../js/script.js")
+		script(type="text/javascript", src="./js/script.js")
