--- a/public/html/views/home.pug
+++ b/public/html/views/home.pug
@@ -1,1 +1,5 @@
-h1 Welcome to the home view
+#home
+	article
+		header
+			h3 Becoming a Junior Dev is My Goal.
+			h3 This blog will chronicle my journey to reaching that goal
