Redesign start: nav added and styled

--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -2,18 +2,45 @@
 @import "_colors.scss";
 @import "_tools.scss";
 
+*{
+	box-sizing:border-box;
+}
 header#mainHeader{
 	width:100vw;
-	height:6vh;
+	height:30vh;
 	background:white;
-	margin-bottom:2vh;
-}
-footer{
-	position:fixed;
-	bottom:0;
-	width:100vw;
-	height:4vh;
-	text-align:center;
+	margin-bottom:5vh;
+	display:flex;
+	flex-direction: column;
+	align-items:center;
+	h1{
+		height:25vh;
+		line-height:25vh;
+		font-size:2.5em;
+		width:100vw;
+		text-align:center;
+	}
+	nav#mainNav{
+		width:100vw;
+		height:5vh;
+		padding-bottom:1vh;
+		border-bottom:2px solid $highlight;
+		ul{
+			margin:0 auto;
+			height:5vh;
+			width:90vw;
+			display:flex;
+			justify-content:space-around;
+			li{
+				font-size:.9em;
+				line-height:5vh;
+				transition: all 140ms ease-in-out;
+			}
+			li:hover{
+				color:$brown;
+			}
+		}
+	}
 }
 
 
