--- a/public/index.pug
+++ b/public/index.pug
@@ -8,11 +8,22 @@ html(lang='en', ng-app="app")
 
 	body(ng-controller="ctrl")
 		header#mainHeader
-			h1 Climbing the Mountain: a Beginner web dev story
-			#ham
+			h1 Climbing the Mountain
+			nav#mainNav
+				ul
+					li Home
+					li About
+					li Photos
+					li Projects
+					li Contact
+
+
+
+
+
+
 		ui-view
-		footer
-			h1 next page
+
 
 
 
