--- a/public/html/views/home.html
+++ b/public/html/views/home.html
@@ -1,1 +1,1 @@
-<div id="home"><article><header><h3>Becoming a Junior Dev is My Goal.</h3><h3>This blog will chronicle my journey to reaching that goal</h3></header></article></div>
+<div id="home"><header><h3>Becoming a Junior Dev is My Goal.</h3><h3>This blog will chronicle my journey to reaching that goal</h3></header></div>
