--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -1,7 +1,10 @@
 @import "reset.css";
 @import "_colors.scss";
 @import "_tools.scss";
-
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto+Condensed';
+//fontbox
+//font-family: 'Roboto Condensed', sans-serif
+//font-family: 'Open Sans Condensed', sans-serif
 *{
 	box-sizing:border-box;
 }
@@ -14,6 +17,7 @@ header#mainHeader{
 	flex-direction: column;
 	align-items:center;
 	h1{
+		font-family: 'Open Sans Condensed', sans-serif;
 		height:25vh;
 		line-height:25vh;
 		font-size:2.5em;
@@ -21,6 +25,7 @@ header#mainHeader{
 		text-align:center;
 	}
 	nav#mainNav{
+		font-family: 'Roboto Condensed', sans-serif;
 		width:100vw;
 		height:5vh;
 		padding-bottom:1vh;
@@ -47,18 +52,37 @@ header#mainHeader{
 ui-view{
 	width:100vw;
 	#home{
-		width:100%;
-		article{
-			witdh:100%;
-			background:red;;
+		width:100vw;
+		display:flex;
+		flex-direction: column;
+		.post{
 			display:flex;
-			flex-directon:column;
-			align-content:center;
+			flex-direction:column;
+			margin:0 auto;
+			width:95vw;
 			header{
-				width:100%;
-				h3{
-					text-align:center;
+				text-align:center;
+				h1{
+					font-family: 'Roboto Condensed', sans-serif;
+					margin-bottom:1vh;
 				}
+				font-family: 'Open Sans Condensed', sans-serif;
+				margin-bottom:3vh;
+
+			}
+			img{
+				margin:0 auto;
+				width:92vw;
+			}
+			article{
+				p{
+					font-family: helvetica;
+					font-size: .9em;
+					line-height:1.5em;
+				}
+				padding:3vh 0;
+				border-bottom: 2px black solid;
+				margin-bottom: 10vh;
 			}
 		}
 	}
