--- a/public/css/master.css
+++ b/public/css/master.css
@@ -66,5 +66,28 @@ ui-view {
           font-family: helvetica;
           font-size: .9em;
           line-height: 1.5em; }
+    ui-view #home #aboutMe {
+      display: flex;
+      flex-direction: column;
+      width: 100vw;
+      align-items: center; }
+      ui-view #home #aboutMe header {
+        margin-bottom: 3vh;
+        padding: 2vh 0;
+        border: solid 3px #7DD6C2;
+        width: 80vw;
+        text-align: center;
+        font-family: 'Roboto Condensed', sans-serif; }
+      ui-view #home #aboutMe img {
+        width: 80vw;
+        border-radius: 100%;
+        margin-bottom: 3vh; }
+      ui-view #home #aboutMe article a, ui-view #home #aboutMe article a:visited, ui-view #home #aboutMe article a:hover {
+        color: black; }
+      ui-view #home #aboutMe article p {
+        font-size: 1em;
+        font-family: helvetica;
+        text-align: center;
+        margin-bottom: 1vh; }
 
 /*# sourceMappingURL=master.css.map */
