--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -85,5 +85,36 @@ ui-view{
 				margin-bottom: 10vh;
 			}
 		}
+		#aboutMe{
+
+			display:flex;
+			flex-direction: column;
+			width:100vw;
+			align-items: center;
+			header{
+				margin-bottom:3vh;
+				padding:2vh 0;
+				border: solid 3px $highlight;
+				width:80vw;
+				text-align:center;
+				font-family: 'Roboto Condensed', sans-serif;
+			}
+			img{
+				width:80vw;
+				border-radius:100%;
+				margin-bottom:3vh;
+			}
+			article{
+				a, a:visited, a:hover{
+					color:black;
+				}
+				p{
+					font-size:1em;
+					font-family: helvetica;
+					text-align:center;
+					margin-bottom:1vh;
+				}
+			}
+		}
 	}
 }
