--- a/public/html/views/home.pug
+++ b/public/html/views/home.pug
@@ -6,3 +6,11 @@
 		img(src="{{item.imgSrc}}", alt="{{item.imgAlt}}")
 		article
 			p {{item.article}}
+	#aboutMe
+		header
+			h1 ABOUT ME
+		img(src="https://avatars3.githubusercontent.com/u/16170598?v=3&s=460", alt="A picture of me")
+		article
+			p I'm a beginner Web Developer, currently attending DevMountain.
+			a(href="#")
+				p View my portfolio
