Added a database and the beginings of a post to db func

--- a/public/index.pug
+++ b/public/index.pug
@@ -8,7 +8,8 @@ html(lang='en', ng-app="app")
 
 	body(ng-controller="ctrl")
 		header#mainHeader
-			h1 Climbing the Mountain
+			h1 Climbing the Mountai
+				span(ng-click="makePost()") n
 			nav#mainNav
 				ul
 					li Home
