Posts now display properly when inserted into the table

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -42,7 +42,7 @@ ui-view {
   ui-view #home {
     width: 100vw;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column-reverse; }
     ui-view #home .post {
       display: flex;
       flex-direction: column;
