--- a/public/css/master.css
+++ b/public/css/master.css
@@ -34,8 +34,11 @@ header#mainHeader {
         font-size: .9em;
         line-height: 5vh;
         transition: all 140ms ease-in-out; }
-      header#mainHeader nav#mainNav ul li:hover {
-        color: #c3ba6d; }
+        header#mainHeader nav#mainNav ul li a, header#mainHeader nav#mainNav ul li a:visited {
+          color: black;
+          text-decoration: none; }
+        header#mainHeader nav#mainNav ul li a:hover {
+          color: #c3ba6d; }
 
 ui-view {
   width: 100vw; }
