--- a/public/css/_queries.scss
+++ b/public/css/_queries.scss
@@ -129,20 +129,18 @@
 				float:right;
 				header{
 					margin:0 auto;
-					width:30vw;
+					width:25vw;
 					text-align:center;
 				}
 				article{
-					width:30vw;
-					margin:0 0vw;
+					width:25vw;
+					margin:0 auto;
 					display:flex;
 					flex-direction:column;
 					align-items:center;
 					justify-content:space-around;
 					img{
 						width:25vw;
-						margin:0;
-						float:right;
 						padding-bottom:3vh;
 					}
 					a, a:visited, a:hover{
