--- a/public/css/master.css
+++ b/public/css/master.css
@@ -93,19 +93,17 @@
       float: right; }
       ui-view #home #aboutMe header {
         margin: 0 auto;
-        width: 30vw;
+        width: 25vw;
         text-align: center; }
       ui-view #home #aboutMe article {
-        width: 30vw;
-        margin: 0 0vw;
+        width: 25vw;
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around; }
         ui-view #home #aboutMe article img {
           width: 25vw;
-          margin: 0;
-          float: right;
           padding-bottom: 3vh; }
         ui-view #home #aboutMe article a, ui-view #home #aboutMe article a:visited, ui-view #home #aboutMe article a:hover {
           color: black; }
