--- a/public/html/views/contact.html
+++ b/public/html/views/contact.html
@@ -1,15 +1,27 @@
 
-<div id="aboutPage">
+<div id="contactPage">
   <div id="deets">
     <header>
       <h1>Contact Details</h1>
     </header>
     <section>
       <ul>
-        <li>Email</li>
-        <li>Phone</li>
-        <li>Skype</li>
-        <li>Linkedin</li>
+        <li>
+          <h1>Email</h1>
+          <h2>joshpeterson.dev@gmail.com</h2>
+        </li>
+        <li>
+          <h1>Phone</h1>
+          <h2>385-445-0721</h2>
+        </li>
+        <li>
+          <h1>Skype</h1>
+          <h2>joshpeterson15</h2>
+        </li>
+        <li>
+          <h1>linkedin</h1>
+          <h2><a href="www.linkedin.com/in/josh-peterson-b9093910b">www.linkedin.com/in/josh-peterson-b9093910b</a></h2>
+        </li>
       </ul>
     </section>
     <hr/>
