--- a/public/html/views/contact.pug
+++ b/public/html/views/contact.pug
@@ -1,13 +1,22 @@
-#aboutPage
+#contactPage
 	#deets
 		header
 			h1 Contact Details
 		section
 			ul
-				li Email
-				li Phone
-				li Skype
-				li Linkedin
+				li
+					h1 Email
+					h2 joshpeterson.dev@gmail.com
+				li
+					h1 Phone
+					h2 385-445-0721
+				li
+					h1 Skype
+					h2 joshpeterson15
+				li
+					h1 linkedin
+					h2
+						a(href="www.linkedin.com/in/josh-peterson-b9093910b") www.linkedin.com/in/josh-peterson-b9093910b
 		hr
 	#message
 		header
