--- a/public/html/views/home.html
+++ b/public/html/views/home.html
@@ -1,9 +1,8 @@
 
 <div id="home">
   <div id="aboutMe">
-    <header>
-      <h1>ABOUT ME</h1>
-    </header>
+    <header><a ui-sref="/about" title="About">
+        <h1>ABOUT ME</h1></a></header>
     <article><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
       <div class="content">
         <p>I'm a beginner Web Developer, currently attending DevMountain.</p><a ui-sref="/contact">
