--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -1,4 +1,10 @@
-$highlight: #7DD6C2;
+$highlight:#3B3A3A ;
 	$highlight-shadow: rgba(#7dd6c2, 0.59);
 $lowLight: rgba(1, 1, 1, 0.28);
 $brown: rgb(195, 186, 109);
+
+$black: #3B3A3A;
+$gray: #CDCDCD;
+$darkGray: #999999;
+$lightRed: #FF3947;
+$red: #9A4645;
