--- a/public/html/views/home.pug
+++ b/public/html/views/home.pug
@@ -1,7 +1,8 @@
 #home
 	#aboutMe
 		header
-			h1 ABOUT ME
+			a(ui-sref="/about", title="About")
+				h1 ABOUT ME
 		article
 			img(src="https://avatars3.githubusercontent.com/u/16170598?v=3&s=460", alt="A picture of me")
 			.content
